--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Payment Management Service Web Project",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "start:dev": "cross-env NODE_ENV=development nodemon src/index.js",
+		"start": "cross-env NODE_ENV=production node src/index.js"
   },
   "author": "AD",
   "license": "ISC",
@@ -22,6 +22,7 @@
     "validator": "^13.7.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "nodemon": "^2.0.19"
   }
 }
