--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Payment Management Service Web Project",
   "main": "index.js",
   "scripts": {
-    "start:dev": "cross-env NODE_ENV=development nodemon src/index.js",
-		"start": "cross-env NODE_ENV=production node src/index.js"
+    "start": "pm2-runtime start ecosystem.config.js --env production",
+		"start:dev": "cross-env NODE_ENV=development nodemon src/index.js",
+		"start:prod": "cross-env NODE_ENV=production node src/index.js"
   },
   "author": "AD",
   "license": "ISC",
